RESOLVED FIXED172852
[GTK][WPE] Fix the condition to decide whether the MediaPlayer can be rendered accelerated
https://bugs.webkit.org/show_bug.cgi?id=172852
Summary [GTK][WPE] Fix the condition to decide whether the MediaPlayer can be rendere...
Miguel Gomez
Reported 2017-06-02 03:09:18 PDT
The current condition will return false if the video doesn't have a renderer. This is an error because the video may be hidden, but that doesn't mean that the rendering cannot be accelerated. For example, when gstreamer-gl is enabled, if we are copying the video frames to webgl and the video element is hidden we will perform the copies using the sw path, because the check about whether the media player can be accelerated will return false. Also, during the loading of the page, if the condition gets checked before the video renderer is created, it will return false as well.
Attachments
Patch (2.57 KB, patch)
2017-06-02 03:25 PDT, Miguel Gomez
no flags
Miguel Gomez
Comment 1 2017-06-02 03:25:07 PDT
WebKit Commit Bot
Comment 2 2017-06-05 00:45:16 PDT
Comment on attachment 311814 [details] Patch Clearing flags on attachment: 311814 Committed r217777: <http://trac.webkit.org/changeset/217777>
WebKit Commit Bot
Comment 3 2017-06-05 00:45:17 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.